JumpScript/tests/baselines/reference/recursiveExportAssignmentAndFindAliasedType2.errors.txt
tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType2_moduleDef.d.jump(2,5): error TS2303: Circular definition of import alias 'self'.


==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType2_moduleA.jump (0 errors) ====
    /// <reference path="recursiveExportAssignmentAndFindAliasedType2_moduleDef.d.jump"/>
    import moduleC = require("moduleC");
    import ClassB = require("recursiveExportAssignmentAndFindAliasedType2_moduleB");
    export var b: ClassB; // This should result in type ClassB
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType2_moduleDef.d.jump (1 errors) ====
    declare module "moduleC" {
        import self = require("moduleD");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
        export = self;
    }
    declare module "moduleD" {
        import self = require("moduleC");
        export = self;
    }
    
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType2_moduleB.jump (0 errors) ====
    class ClassB { }
    export = ClassB;
    